# cpu_3d_render

./: .gitignore  CMakeLists.txt  Colors.h  CommonDefines.h  Display.cpp  Display.h  GlmAdapter.h  Mesh.cpp  Mesh.h  README.md  Triangle.h  Vectors.h  main.cpp
common/: CMakeLists.txt
common/inc/: CommonDefines.h  Math3D.h
common/src/: Math3D.cpp
core/common/inc/: Colors.h  CommonDefines.h  Math3D.h  Vectors.hpp
core/common/src/: Lodepng.cpp  Math3D.cpp  lodepng.cpp
core/common/test/: Math3DTest.cpp
core/graphics/camera/inc/: Camera.h
core/graphics/clipping/inc/: Clipping.h
core/graphics/clipping/src/: Cliping.cpp
core/graphics/light/inc/: light.h
core/graphics/rendering/inc/: Display.h
core/graphics/rendering/src/: Display.cpp
core/graphics/shapes/inc/: Mesh.h  Triangle.h
core/graphics/shapes/src/: Mesh.cpp  Triangle.cpp
core/graphics/textures/inc/: Textures.h
core/logger/: LogHelper.h
core/utils/inc/: GlmAdapter.h  ProjectionMat.h
core/utils/src/: ProjectionMat.cpp
graphics/: CMakeLists.txt
graphics/light/inc/: light.h
graphics/rendering/inc/: Display.h
graphics/rendering/src/: Display.cpp
graphics/shapes/inc/: Mesh.h  Triangle.h
graphics/shapes/src/: Mesh.cpp  Triangle.cpp
graphics/textures/inc/: Textures.h
utils/: CMakeLists.txt
utils/inc/: GlmAdapter.h
utils/src/: ProjectionMat.cpp
